# _pyrite

./: .gitignore  .markdownlint.json  AGENTS.md  ARCHITECTURE_PROPOSAL.md  BLEND_VALIDATION_REPORT.md  BLEND_VALIDATION_SUMMARY.md  CHANGELOG.md  CLAUDE_CODE_CONTINUATION_PROMPT.md  CONTRIBUTING.md  DEMO_OVERHAUL_PLAN.md  DETAIL_VIEW_OVERHAUL_COMPLETE.md  FINAL_RECAP_PHASE3.md  LICENSE  NOVA_UNIFIED_DESIGN.md  PHASE4_COMPLETE.md  PHASE_3_SUMMARY.md  PR_DESCRIPTION.md  QUICK_START_TODOIST.md  README.md  TODOIST_INTEGRATION_MVP.md  V0.8.0_AUDIT_SUMMARY.md  V0.9.0_PHASE2_CONTINUATION.md  V0.9.0_PHASE4_CONTINUATION.md  WORK_EFFORT_DETAIL_IMPROVEMENTS.md  Work Effort Tools.md  _PYRITE_INTEGRATION_BRIEF.md  _sandbox.txt  blend_test.py  blend_validation_report.json  blend_validation_test.py  nova-god-prompt.md  pyproject.toml  pyrite  test_plugins.py  test_todoist.py
.claude/: README.md
.github/: PULL_REQUEST_TEMPLATE.md  mlc_config.json
.obsidian/: workspace.json
_coordination/: CONTEXT.md  CURSOR_CONTINUATION_PROMPT.md
_docs/: 00.00_index.md
_spin_up/: SPIN_UP_PROCEDURE.md  understanding_20251231_1305.md
_work_efforts/: CLAUDE_CODE_TASK.md  CROSS_CHAT_CONTEXT.md  OBSIDIAN_FEATURES_GUIDE.md  QUICK_REFERENCE.md  WORK_EFFORT_CREATION_GUIDE.md  WORK_EFFORT_TOOL_BAG_STANDARD.md  devlog.md
_work_efforts_backup_20260101_173549/: devlog.md
docs/: AGENTS-WORKSPACE.md  MCP-IMAGE-WORKFLOW.md  QUICK-REFERENCE.md  V0.8.0_RELEASE_PLAN.md  work-efforts-system.md
integrations/: cursor-coding-protocols.md  run-ccp-tests.sh
lib/: keymaster.js  seed-architecture-example.js
(+554 files in other folders)
